--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/eslint-config-prettier": "^4.0.0",
+    "axios": "^0.18.0",
+    "bulma": "^0.7.2",
     "vue": "^2.5.17"
   },
   "devDependencies": {
@@ -16,7 +19,9 @@
     "@vue/cli-service": "^3.1.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0-0",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-plugin-vue": "^5.0.0-beta.3",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
@@ -25,7 +30,8 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/recommended",
+      "plugin:prettier/recommended",
       "eslint:recommended"
     ],
     "rules": {},
